--- a/assets/sass/inc/_i-setting.scss
+++ b/assets/sass/inc/_i-setting.scss
@@ -3,6 +3,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Aboreto&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Shippori+Mincho:wght@600&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Hind:wght@300;400;500;700display=swap');
 
 /*
 i-setting
