--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -50,6 +50,7 @@
 @use "object/project/p-environment";
 @use "object/project/p-about";
 @use "object/project/p-people";
+@use "object/project/p-zadankai";
 
 /*
   3.3 - Utility
