--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -45,6 +45,7 @@
 @use "object/project/p-nav";
 @use "object/project/p-breadcrumb";
 @use "object/project/p-link-box";
+@use "object/project/p-home";
 @use "object/project/p-faq";
 @use "object/project/p-guideline";
 @use "object/project/p-environment";
