--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,9 +39,16 @@ l-wrapper
 .l-wrapper {
   max-width: 84rem;
   width: 100%;
-  padding: 0 2rem;
   padding: 0 4%;
   margin: 0 auto;
+}
+.l-wrapper.home {
+  padding: 0 8%;
+}
+@media screen and (min-width: 900px) {
+  .l-wrapper.home {
+    padding: 0 2rem;
+  }
 }
 @media screen and (min-width: 1280px) {
   .l-wrapper {
@@ -54,6 +61,14 @@ l-wrapper
   width: 100%;
   padding: 0 0rem;
   margin: 0 auto;
+}
+.l-wrapper2.home {
+  padding: 0 8%;
+}
+@media screen and (min-width: 900px) {
+  .l-wrapper2.home {
+    padding: 0 2rem;
+  }
 }
 @media screen and (min-width: 900px) {
   .l-wrapper2 {
@@ -69,6 +84,18 @@ l-wrapper
 }
 @media screen and (min-width: 900px) {
   .l-wrapper3 {
+    padding: 0 2rem;
+  }
+}
+
+.l-wrapper4 {
+  max-width: 37rem;
+  width: 100%;
+  padding: 0 8%;
+  margin: 0 auto;
+}
+@media screen and (min-width: 900px) {
+  .l-wrapper4 {
     padding: 0 2rem;
   }
 }
@@ -552,12 +579,17 @@ c-arrow
 .c-arrow {
   display: block;
   width: 224px;
-  height: 70px;
+  height: 58px;
   border-radius: 35px;
   border: 1px solid #1B6EC3;
   margin: 0 auto;
   position: relative;
   z-index: 2;
+}
+@media screen and (min-width: 900px) {
+  .c-arrow {
+    height: 70px;
+  }
 }
 .c-arrow span {
   color: #1B6EC3;
@@ -575,6 +607,10 @@ c-arrow
   font-size: clamp(0.875rem, 0.36vw + 0.775rem, 1.125rem);
   background: url(../img/arw/blue_right.svg) no-repeat calc(100% - 1.5rem) 50% #fff;
 }
+.c-arrow.left {
+  margin: 0;
+}
+
 /*
 c-br
 -----------------------------------------------------*/
@@ -2311,6 +2347,495 @@ p-breadcrumb
 p-link-box
 -----------------------------------------------------*/
 /*
+p-home
+-----------------------------------------------------*/
+.p-home {
+  position: relative;
+}
+.p-home--main {
+  height: clamp(528px, 30.32vw + 388.6px, 864px);
+  padding-top: clamp(24px, 7.94vw - 12.5px, 112px);
+}
+.p-home--main--move {
+  height: clamp(528px, 30.32vw + 388.6px, 864px);
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  overflow: hidden;
+  z-index: -1;
+}
+.p-home--main--outer {
+  position: relative;
+}
+.p-home--main--outer .list02 {
+  display: block;
+  padding-top: clamp(24px, 1.82vw + 15.6px, 32px);
+  padding-bottom: clamp(24px, 1.82vw + 15.6px, 32px);
+  max-width: 305px;
+  width: 100%;
+  margin: 0 auto;
+}
+@media screen and (min-width: 900px) {
+  .p-home--main--outer .list02 {
+    display: none;
+  }
+}
+.p-home--main--outer .list02 .p-home--main-list-item {
+  max-width: 100%;
+  width: 100%;
+  height: 60px;
+  border-radius: 30px;
+  list-style-type: none;
+}
+.p-home--main h1 {
+  font-size: clamp(2.125rem, 2.08vw + 1.525rem, 3.5625rem);
+  margin-bottom: clamp(20px, 1.81vw + 11.6px, 40px);
+  line-height: 1.4;
+  font-weight: 700;
+}
+.p-home--main-list-item {
+  max-width: 288px;
+  width: 100%;
+  height: 70px;
+  border-radius: 35px;
+  list-style-type: none;
+}
+.p-home--main-list-item span {
+  color: #1B6EC3;
+  font-weight: 700;
+  width: 100%;
+  height: 100%;
+  padding: 0 2rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  font-size: clamp(1rem, 0.09vw + 0.975rem, 1.0625rem);
+}
+.p-home--main-list-item.-white {
+  background: url(../img/arw/blue_right.svg) no-repeat calc(100% - 2rem) 50% #fff;
+  background-size: 15px;
+  border: 1px solid #1B6EC3;
+}
+.p-home--main-list-item.-yellow {
+  margin-top: 12px;
+  background: url(../img/icon/blue_blank.svg) no-repeat calc(100% - 2rem) 53% #FFEA00;
+}
+.p-home--main-list.list01 {
+  display: none;
+}
+@media screen and (min-width: 900px) {
+  .p-home--main-list.list01 {
+    display: block;
+  }
+}
+.p-home--about {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  color: #fff;
+}
+.p-home--about--outer {
+  margin-bottom: clamp(74px, 3.43vw + 58.2px, 112px);
+  background: url(../img/top/hand_sp.png) no-repeat 105% 100% #1B6EC3;
+  background-size: contain;
+  background-size: 40%;
+  padding-top: clamp(64px, 2.89vw + 50.7px, 96px);
+  padding-bottom: clamp(64px, 2.89vw + 50.7px, 96px);
+}
+@media screen and (min-width: 900px) {
+  .p-home--about--outer {
+    background: url(../img/top/hand.png) no-repeat 10% 0 #1B6EC3;
+    background-size: contain;
+  }
+}
+.p-home--about h2 {
+  width: 100%;
+  font-size: clamp(1.75rem, 0.72vw + 1.54375rem, 2.25rem);
+  margin-bottom: clamp(16px, 1.44vw + 9.4px, 32px);
+  font-weight: 700;
+  list-style: 1.6;
+}
+.p-home--about h2 br {
+  display: none;
+}
+@media screen and (min-width: 900px) {
+  .p-home--about h2 {
+    width: 50%;
+  }
+  .p-home--about h2 br {
+    display: block;
+  }
+}
+.p-home--about h2 span {
+  font-size: clamp(0.75rem, 0.18vw + 0.7rem, 0.875rem);
+  margin-bottom: clamp(10px, 1.26vw + 4.2px, 24px);
+  font-weight: 500;
+  list-style: 1;
+  display: block;
+}
+.p-home--about p {
+  width: 100%;
+}
+@media screen and (min-width: 900px) {
+  .p-home--about p {
+    width: 44%;
+    margin-top: 42px;
+  }
+}
+.p-home--works, .p-home--environment {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  gap: 24px 0;
+  margin-bottom: clamp(64px, 5.42vw + 39px, 124px);
+}
+.p-home--works figure, .p-home--environment figure {
+  width: 100%;
+}
+@media screen and (min-width: 768px) {
+  .p-home--works figure, .p-home--environment figure {
+    width: 55%;
+  }
+}
+@media screen and (min-width: 900px) {
+  .p-home--works figure, .p-home--environment figure {
+    width: 60%;
+  }
+}
+.p-home--works div, .p-home--environment div {
+  width: 100%;
+}
+@media screen and (min-width: 768px) {
+  .p-home--works div, .p-home--environment div {
+    width: 40%;
+  }
+}
+@media screen and (min-width: 900px) {
+  .p-home--works div, .p-home--environment div {
+    width: 30%;
+    padding-right: 4rem;
+  }
+}
+.p-home--works div h2, .p-home--environment div h2 {
+  font-size: clamp(1.75rem, 0.72vw + 1.54375rem, 2.25rem);
+  margin-bottom: clamp(16px, 1.44vw + 9.4px, 32px);
+  font-weight: 700;
+  list-style: 1.6;
+}
+.p-home--works div h2 span, .p-home--environment div h2 span {
+  font-size: clamp(0.75rem, 0.18vw + 0.7rem, 0.875rem);
+  margin-bottom: clamp(10px, 1.26vw + 4.2px, 24px);
+  color: #1B6EC3;
+  font-weight: 500;
+  list-style: 1;
+  display: block;
+}
+.p-home--people {
+  margin-bottom: clamp(64px, 1.44vw + 57.4px, 80px);
+}
+.p-home--people .p-people--intro--title h2 {
+  font-size: clamp(1.75rem, 0.72vw + 1.54375rem, 2.25rem);
+  margin-bottom: clamp(16px, 1.44vw + 9.4px, 32px);
+  font-weight: 700;
+  list-style: 1.6;
+}
+.p-home--people .p-people--intro--title h2 span {
+  font-size: clamp(0.75rem, 0.18vw + 0.7rem, 0.875rem);
+  margin-bottom: clamp(10px, 1.26vw + 4.2px, 24px);
+  color: #1B6EC3;
+  font-weight: 500;
+  list-style: 1;
+  display: block;
+}
+.p-home--zadankai {
+  margin-bottom: clamp(64px, 1.44vw + 57.4px, 80px);
+  padding-top: clamp(80px, 7.22vw + 46.8px, 160px);
+  padding-bottom: clamp(72px, 5.05vw + 48.8px, 128px);
+  background: url(../img/top/zadankai_sp.png) no-repeat 50% 50%;
+  background-size: cover;
+}
+@media screen and (min-width: 768px) {
+  .p-home--zadankai {
+    background: url(../img/top/zadankai.png) no-repeat 50% 50%;
+  }
+}
+.p-home--zadankai--title {
+  text-align: center;
+  margin: 0 auto 20px;
+}
+.p-home--zadankai--title img {
+  display: block;
+  margin: 0 auto;
+}
+.p-home--zadankai--text {
+  text-align: center;
+  color: #fff;
+}
+.p-home--case {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: end;
+  margin-bottom: clamp(16px, 4.33vw - 3.9px, 64px);
+}
+.p-home--case div {
+  width: 100%;
+}
+@media screen and (min-width: 768px) {
+  .p-home--case div {
+    width: calc(100% - (224px + 4rem));
+  }
+}
+.p-home--case div h2 {
+  font-size: clamp(1.75rem, 0.72vw + 1.54375rem, 2.25rem);
+  margin-bottom: clamp(16px, 1.44vw + 9.4px, 32px);
+  font-weight: 700;
+  list-style: 1.6;
+}
+.p-home--case div h2 span {
+  font-size: clamp(0.75rem, 0.18vw + 0.7rem, 0.875rem);
+  margin-bottom: clamp(10px, 1.26vw + 4.2px, 24px);
+  color: #1B6EC3;
+  font-weight: 500;
+  list-style: 1;
+  display: block;
+}
+.p-home--case div p {
+  margin: 0 0 0rem;
+}
+@media screen and (min-width: 768px) {
+  .p-home--case div p {
+    margin: 0 0 0.5rem;
+  }
+}
+.p-home--case .btn01 {
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  .p-home--case .btn01 {
+    display: contents;
+  }
+}
+.p-home--slide {
+  margin-bottom: clamp(64px, 5.42vw + 39px, 124px);
+}
+.p-home--slide .btn02 {
+  display: block;
+}
+@media screen and (min-width: 768px) {
+  .p-home--slide .btn02 {
+    display: none;
+  }
+}
+
+.card {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 260px;
+}
+@media screen and (min-width: 768px) {
+  .card {
+    width: 307px;
+    height: 343px;
+  }
+}
+.card #omote {
+  -webkit-box-ordinal-group: 3;
+      -ms-flex-order: 2;
+          order: 2;
+  background: #1B6EC3;
+  padding: 1rem 2rem;
+  width: 260px;
+  height: 180px;
+  border-radius: 0 0 15px 15px;
+}
+@media screen and (min-width: 768px) {
+  .card #omote {
+    padding: 2rem;
+    width: 307px;
+    height: 343px;
+    border-radius: 15px;
+  }
+}
+.card #omote h2 {
+  font-size: clamp(0.75rem, 0.9vw + 0.49375rem, 1.375rem);
+  margin-bottom: clamp(16px, 0.36vw + 14.4px, 20px);
+  font-weight: 700;
+  color: #fff;
+  text-align: center;
+  line-height: 1;
+}
+.card #omote p {
+  font-size: clamp(0.75rem, 0.54vw + 0.59375rem, 1.125rem);
+  line-height: 1.6;
+  font-weight: 700;
+  color: #fff;
+  text-align: left;
+}
+.card #ura {
+  -webkit-box-ordinal-group: 2;
+      -ms-flex-order: 1;
+          order: 1;
+  background: #ECF1FA;
+  padding: 1rem 2rem;
+  width: 260px;
+  height: 210px;
+  border-radius: 15px 15px 0 0;
+}
+@media screen and (min-width: 768px) {
+  .card #ura {
+    padding: 2rem;
+    width: 307px;
+    height: 343px;
+    border-radius: 15px;
+  }
+}
+.card #ura h2 {
+  font-size: clamp(0.75rem, 0.9vw + 0.49375rem, 1.375rem);
+  margin-bottom: clamp(16px, 0.36vw + 14.4px, 20px);
+  font-weight: 700;
+  color: #1B6EC3;
+  text-align: center;
+  line-height: 1;
+}
+.card #ura figure {
+  height: 80px;
+}
+@media screen and (min-width: 768px) {
+  .card #ura figure {
+    height: 126px;
+  }
+}
+.card #ura figure img {
+  height: 100%;
+  display: block;
+  margin: 0 auto;
+  margin-bottom: clamp(16px, 1.44vw + 9.4px, 32px);
+}
+.card #ura figure figcaption {
+  font-size: clamp(0.75rem, 0.9vw + 0.49375rem, 1.375rem);
+  font-weight: 700;
+  color: #1B6EC3;
+  text-align: center;
+}
+
+.fuda {
+  display: inline-block;
+  -webkit-transition: 1s;
+  transition: 1s;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+}
+@media screen and (min-width: 768px) {
+  .fuda {
+    position: absolute;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .card {
+    display: block;
+    position: relative;
+    -webkit-perspective: 500px;
+            perspective: 500px;
+  }
+  #omote {
+    -webkit-transform: rotateY(180deg);
+            transform: rotateY(180deg);
+  }
+  #ura {
+    -webkit-transform: rotateY(0deg);
+            transform: rotateY(0deg);
+  }
+  .card:hover #omote {
+    -webkit-transform: rotateY(0deg);
+            transform: rotateY(0deg);
+  }
+  .card:hover #ura {
+    -webkit-transform: rotateY(-180deg);
+            transform: rotateY(-180deg);
+  }
+}
+.swiper-slide {
+  width: 260px;
+  height: auto;
+  margin: 0 24px;
+}
+@media screen and (min-width: 768px) {
+  .swiper-slide {
+    width: 307px;
+    height: 343px;
+    margin: 0 32px;
+  }
+}
+
+.sample-slider {
+  width: 100%;
+  overflow: hidden;
+  padding: 0 0 24px !important;
+}
+@media screen and (min-width: 768px) {
+  .sample-slider {
+    padding: 64px 0 !important;
+  }
+}
+
+.sample-slider .swiper-wrapper {
+  -webkit-transition-timing-function: linear;
+          transition-timing-function: linear;
+}
+
+.slider-main {
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+  position: absolute;
+  top: 0;
+  left: 50%;
+  width: 100%;
+}
+@media screen and (min-width: 768px) {
+  .slider-main {
+    left: 20%;
+  }
+}
+
+.slider-main .swiper-wrapper {
+  -webkit-transition-timing-function: linear;
+          transition-timing-function: linear;
+}
+
+/*
 p-faq
 -----------------------------------------------------*/
 .p-faq > dl > div > dt {
@@ -3256,6 +3781,10 @@ p-people
     width: 100%;
     padding-right: 0;
   }
+  .p-people--intro--div figure img {
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
+  }
 }
 .p-people--intro--div figure figcaption {
   width: clamp(134px, 2.35vw + 123.2px, 160px);
@@ -3290,12 +3819,15 @@ p-people
     right: -50px;
   }
 }
+.p-people--intro--div figure:hover img {
+  opacity: 0;
+}
 .p-people--intro--div h2 {
   width: 40%;
   text-align: center;
   position: absolute;
-  bottom: 32px;
-  right: 0;
+  bottom: 6px;
+  right: -10px;
   text-align: center;
   font-weight: 700;
   font-size: clamp(1rem, 0.45vw + 0.86875rem, 1.3125rem);
@@ -3342,9 +3874,9 @@ p-people
   }
 }
 .p-people--intro--div:nth-child(even) h2 {
-  bottom: 32px;
   right: auto;
-  left: 0;
+  bottom: 6px;
+  left: -10px;
 }
 @media screen and (min-width: 768px) {
   .p-people--intro--div:nth-child(even) h2 {
@@ -3353,14 +3885,73 @@ p-people
     left: auto;
   }
 }
+.p-people--intro--title.home {
+  width: 100%;
+}
+@media screen and (min-width: 768px) {
+  .p-people--intro--title.home {
+    width: calc(30% + 0rem);
+    padding-right: 3rem;
+    margin: 0;
+  }
+}
+@media screen and (min-width: 768px) {
+  .p-people--intro--div.home {
+    width: calc(30% + 0rem);
+    padding-right: 3rem;
+    margin: 0;
+  }
+}
+.p-people--intro--div.home figcaption {
+  width: 134px;
+  height: 134px;
+  font-size: 12px;
+}
+@media screen and (min-width: 768px) {
+  .p-people--intro--div.home figcaption {
+    width: clamp(112px, 6vw + 65.9px, 160px);
+    height: clamp(112px, 6vw + 65.9px, 160px);
+    font-size: clamp(0.625rem, 0.5vw + 0.3875rem, 0.875rem);
+  }
+}
+@media screen and (min-width: 768px) {
+  .p-people--intro--div.intro_01 figure {
+    background: url(../img/people/people01B.png) no-repeat 50% 50%;
+    background-size: contain;
+  }
+}
+@media screen and (min-width: 768px) {
+  .p-people--intro--div.intro_02 figure {
+    background: url(../img/people/people02B.png) no-repeat 50% 50%;
+    background-size: contain;
+  }
+}
 .p-people--intro--div.intro_02 figure figcaption {
   background: #009AB5;
+}
+@media screen and (min-width: 768px) {
+  .p-people--intro--div.intro_03 figure {
+    background: url(../img/people/people03B.png) no-repeat 50% 50%;
+    background-size: contain;
+  }
 }
 .p-people--intro--div.intro_03 figure figcaption {
   background: #008BBA;
 }
+@media screen and (min-width: 768px) {
+  .p-people--intro--div.intro_04 figure {
+    background: url(../img/people/people04B.png) no-repeat 50% 50%;
+    background-size: contain;
+  }
+}
 .p-people--intro--div.intro_04 figure figcaption {
   background: #0075BC;
+}
+@media screen and (min-width: 768px) {
+  .p-people--intro--div.intro_05 figure {
+    background: url(../img/people/people05B.png) no-repeat 50% 50%;
+    background-size: contain;
+  }
 }
 .p-people--intro--div.intro_05 figure figcaption {
   background: #0F68B2;
@@ -3395,16 +3986,36 @@ p-people
 }
 .p-people--bnr--title {
   text-align: center;
-  margin: 0 auto 20px;
+  margin: 0 auto 16px;
+  padding: 0 12%;
+}
+@media screen and (min-width: 900px) {
+  .p-people--bnr--title {
+    margin: 0 auto 20px;
+    padding: 0;
+  }
 }
 .p-people--bnr--title img {
   display: block;
   margin: 0 auto;
 }
+.p-people--bnr--text {
+  font-size: clamp(0.75rem, 0.5vw + 0.5125rem, 1rem);
+  margin: 0 0 1rem;
+}
+@media screen and (min-width: 900px) {
+  .p-people--bnr--text {
+    margin: 0 0 2rem;
+  }
+}
 .p-people--bnr--people {
   position: relative;
   z-index: 0;
-  margin-top: -48px;
+}
+@media screen and (min-width: 900px) {
+  .p-people--bnr--people {
+    margin-top: -48px;
+  }
 }
 .p-people--schedule {
   background: #ebf6f9;
