--- a/assets/sass/object/component/_c-arrow.scss
+++ b/assets/sass/object/component/_c-arrow.scss
@@ -6,13 +6,14 @@ c-arrow
 .c-arrow {
   display: block;
   width: 224px;
-  height: 70px;
+  height: 58px;
   border-radius: 35px;
   border: 1px solid inc.$color-blu;
   margin: 0 auto;
   position: relative;
   z-index: 2;
-  @include inc.mq(vr) {
+  @include inc.mq(tab) {
+    height: 70px;
   }
   span {
     color: inc.$color-blu;
@@ -30,5 +31,8 @@ c-arrow
       // background-size: 20px;
       // background-position: calc(100% - 3rem) 50%;
     }
+  }
+  &.left {
+    margin: 0;
   }
 }
